# concrat

./: .gitignore  Cargo.toml  LICENSE  README.md  conf.json  rust-toolchain  rustfmt.toml  test.sh  test_bench.sh  test_dataflow.sh  test_dir.sh  test_examples.sh  test_list
.github/workflows/: ci.yml
bench/: Makefile.txt
bench-correctness/: .gitignore  Makefile.txt
bench-correctness/C-Thread-Pool/: main.c  main.rs  test.sh
bench-correctness/ProcDump-for-Linux/: main.c  test.sh
bench-correctness/brubeck/: build.rs  build_c.sh  c2rust-lib.rs  fix_rust_code.sh  libck.so.0  main.c  main.rs  test.sh
bench-correctness/dump1090/: build.rs  build_c.sh  c2rust-lib.rs  fix_rust_code.sh  main.c  main.rs  result  test.sh
bench-correctness/fzy/: main.c  main.rs
bench-correctness/klib/: c2rust-lib.rs  main.c  result  (+3 more)
bench-correctness/minimap2/: Cargo.toml  build.rs  build_c.sh  c2rust-lib.rs  fix_rust_code.sh  main.c  main.rs  result  test.sh
ci/: test.sh
dataflow_examples/: Makefile.txt
deps_crate/: Cargo.toml
examples/: .gitignore  Makefile.txt  new_dir.sh  remake.sh
scripts/: experiment_analyze.sh  experiment_correctness.sh  experiment_count.sh  experiment_transform.sh  experiment_transform_goblint.sh  list_all  list_correctness  list_fail  list_goblint  list_goblint_fail  list_goblint_success  list_success  test_bench_fail.sh  test_bench_goblint_fail.sh  test_bench_goblint_success.sh  test_bench_success.sh  test_dir.sh  test_examples.sh
src/: analysis.rs  callback.rs  dataflow.rs  graph.rs  lib.rs  main.rs  parse_xml.rs  rewrite.rs  util.rs  validate.rs
(+645 files in other folders)
